画像をfirebaseに保存/画像url取得

--- a/back_end/Pipfile
+++ b/back_end/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 flask = "*"
+google-cloud-storage = "*"
+firebase = "*"
+firebase-admin = "*"
 
 [requires]
 python_version = "3.8"
