--- a/back_end/Pipfile
+++ b/back_end/Pipfile
@@ -10,6 +10,10 @@ flask = "*"
 google-cloud-storage = "*"
 firebase = "*"
 firebase-admin = "*"
+sqlalchemy = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
+pymysql = "*"
 
 [requires]
 python_version = "3.8"
