--- a/front_end/package.json
+++ b/front_end/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^1.1.6",
     "@emotion/core": "^10.0.35",
+    "@emotion/react": "^11.1.4",
     "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "emotion-theming": "^10.0.27",
+    "framer-motion": "^3.2.2-rc.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-dropzone": "^11.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4"
   },
   "scripts": {
