--- a/front_end/package.json
+++ b/front_end/package.json
@@ -15,11 +15,13 @@
     "emotion-theming": "^10.0.27",
     "framer-motion": "^3.2.2-rc.1",
     "react": "^17.0.0",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.0",
     "react-dropzone": "^11.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "react-toast-notifications": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
