--- a/front_end/package.json
+++ b/front_end/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.1.6",
     "@emotion/core": "^10.0.35",
     "@emotion/react": "^11.1.4",
