--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-firebase-admin==4.5.1
+firebase-admin==4.5.2
 firebase==3.0.1
 flask-migrate==2.6.0
 flask-sqlalchemy==2.4.4
@@ -13,7 +13,7 @@ flask==1.1.2
 google-api-core[grpc]==1.26.0; platform_python_implementation != 'PyPy'
 google-api-python-client==1.12.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 google-auth-httplib2==0.0.4
-google-auth==1.26.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+google-auth==1.27.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 google-cloud-core==1.6.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 google-cloud-firestore==2.0.2; platform_python_implementation != 'PyPy'
 google-cloud-storage==1.36.0
@@ -30,19 +30,20 @@ mako==1.1.4; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3
 markupsafe==1.1.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 msgpack==1.0.2
 packaging==20.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pillow==8.1.0
 proto-plus==1.13.0; python_version >= '3.6'
-protobuf==3.14.0
+protobuf==3.15.1
 pyasn1-modules==0.2.8
 pyasn1==0.4.8
 pycparser==2.20; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pymysql==1.0.2
-pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
-python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dateutil==2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-editor==1.0.4
 pytz==2021.1
 requests==2.25.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-rsa==4.7; python_version >= '3.6'
-six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
+rsa==4.7.1; python_version >= '3.6'
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.3.23
 uritemplate==3.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 urllib3==1.26.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
